# gameoflife

./: README.md  gameoflife.cabal
src/: Life.hs
