name:                gameoflife
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sdemos/gameoflife#readme
license:             MIT
license-file:        LICENSE
author:              Stephen Demos
maintainer:          stphndemos@gmail.com
copyright:           2016 Stephen Demos
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Life
  build-depends:       base
                     , repa
  default-language:    Haskell2010

executable gameoflife
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gameoflife
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sdemos/gameoflife
